[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assetts/Theme/defaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Settings/Settings.gd" type="Script" id=2]

[node name="Settings" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
margin_left = 896.0
margin_top = 64.0
margin_right = 1152.0
margin_bottom = 320.0
custom_constants/vseparation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ColorRect/GridContainer"]
margin_right = 451.0
margin_bottom = 120.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="ColorRect/GridContainer/GridContainer"]
margin_right = 231.0
margin_bottom = 50.0
text = "Master Volume:"
align = 2

[node name="Master" type="HSlider" parent="ColorRect/GridContainer/GridContainer"]
margin_left = 251.0
margin_right = 451.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
min_value = -50.0
max_value = 0.0

[node name="Label2" type="Label" parent="ColorRect/GridContainer/GridContainer"]
margin_top = 70.0
margin_right = 231.0
margin_bottom = 120.0
text = "SFX Volume:"
align = 2

[node name="SFX" type="HSlider" parent="ColorRect/GridContainer/GridContainer"]
margin_left = 251.0
margin_top = 70.0
margin_right = 451.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
min_value = -50.0
max_value = 0.0

[node name="DoneButton" type="Button" parent="ColorRect/GridContainer"]
margin_top = 152.0
margin_right = 451.0
margin_bottom = 216.0
rect_min_size = Vector2( 256, 64 )
text = "Done"

[node name="BackToLobbyButton" type="Button" parent="ColorRect/GridContainer"]
margin_top = 248.0
margin_right = 451.0
margin_bottom = 312.0
rect_min_size = Vector2( 256, 64 )
text = "Back To Lobby"

[node name="QuitButton" type="Button" parent="ColorRect/GridContainer"]
margin_top = 344.0
margin_right = 451.0
margin_bottom = 408.0
rect_min_size = Vector2( 256, 64 )
text = "Quit"
[connection signal="value_changed" from="ColorRect/GridContainer/GridContainer/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="ColorRect/GridContainer/GridContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="ColorRect/GridContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/BackToLobbyButton" to="." method="_on_BackToLobbyButton_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
